sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var i: Int=0
  while (i==0) {
    for(i<-0 to getNombreValeurs()-2) {
      if (!plusPetit(i,i+1) ) {
        echange(i,i+1);
        i=0;
      }
    }
  } 
}